namespace METCore.Models
{
    public abstract class BaseClass
    {
        public abstract int Id { get; set; }
    }
}
