@startuml
!theme aws-orange

abstract class BaseClass {
    + Id : int {key}
}

class User {
    + Id : int {key}
    + FirstName : string
    + LastName : string
    + Username : string
    + Password : string
    + Email : string
    + Tlf : string?
    + Active : bool
    + Role : RoleEnum
}

abstract class Squad {
    + Id : int {key}
    + Location : string
    + Mascot : string
}

class Franchise {
    + Protected1 : Player
    + Protected2 : Player
    + Protected3 : Player
}

class Team {
    + User : User
    + Date : DateTime
    + Abb : string
    + Complete : bool
    + RosterSettings : RosterSettings?
    + PlayersIds : IList<int>
    + OffLineup : Lineup
    + DefLineup : Lineup
    + SPLineup : SPLineup
    + ProtectedPlayersIds : IList<int>
    + Trades : IList<Trade>
    + Selections : IDictionary<int, int>?
}

' Players namespace
class Player {
    + Id : int {key}
    + Name : string
    + Height : int
    + Weight : int
    + BirthDate : DateOnly?
    + Position : PositionEnum
    + Position2 : PositionEnum?
    + Position3 : PositionEnum?
    + College : string
    + Retired : bool
}

class Prospect {
    + Id : int {key}
    + Year : int
    + Consensus : int
    + HandSize : string?
    + ArmLength : string?
    + Wingspan : string?
    + FortyYardDash : string?
    + BenchPress : string?
    + VertJump : string?
    + BroadJump : string?
    + ThreeConeDrill : string?
    + TwentyYardShuttle : string?
    + AthScore : int
}

' Main entities
class Contract {
    + Id : int {key}
    + Franchise : Franchise
    + YearSigned : int
    + Length : int
    + Total : long
    + Guaranteed : long
    + Active : bool
}

class Trade {
    + Id : int {key}
    + Franchise : Franchise
    + Team : Team
    + TeamPlayers : IList<int>
    + TeamPicks : IList<int>
    + FranchisePlayers : IList<int>
    + FranchisePicks : IList<int>
    + Complete : bool
}

class RosterSettings {
    + Cap : decimal
    + MaxPerTeam : int
    + BlockedPerTeam : int
}

class SPLineup {
    + Formation : string
    + Player1 : int
    + Player2 : int
    + Player3 : int
    + Player4 : int
    + Player5 : int
}

class Lineup {
    + Player6 : int
    + Player7 : int
    + Player8 : int
    + Player9 : int
    + Player10 : int
    + Player11 : int
}

' Stats namespace classes (main stats entities that are stored)
class SeasonStats {
    + Id : int {key}
    + Season : int
    + FGStats : FGStats?
    + IntStats : IntStats?
    + TackleStats : TackleStats?
    + PassStats : PassStats?
    + RecStats : RecStats?
    + RushStats : RushStats?
    + KOStats : KOStats?
    + PuntStats : PuntStats?
    + KRStats : KRStats?
    + PRStats : PRStats?
}

class FGStats {
    + Id : int {key}
    + ShAtt : int
    + ShMade : int
    + MidAtt : int
    + MidMade : int
    + LongAtt : int
    + LongMade : int
    + Lng : int
    + Blk : int
}

class IntStats {
    + Id : int {key}
    + INT : int
    + Yds : int
    + TD : int
    + Lng : int
}

class TackleStats {
    + Id : int {key}
    + Comb : int
    + Solo : int
    + Asst : int
    + Sck : int
}

abstract class KickStats {
    + Id : int {key}
    + Kick : int
    + Yds : int
    + TB : int
    + OOB : int
    + Ret : int
    + RetYds : int
    + TD : int
}

class KOStats {
    + OnSide : int {key}
    + OnSideRec : int
}

class PuntStats {
    + Inside20 : int {key}
    + Down : int
    + FC : int
    + Blk : int
    + Lng : int
}

abstract class ReturnStats {
    + Id : int {key}
    + Ret : int
    + Yds : int
    + TD : int
    + Plus20 : int
    + Plus40 : int
    + Lng : int
    + FC : int
    + Fumb : int
}

class KRStats {
}

class PRStats {
}

abstract class SkillStats {
    + Id : int {key}
    + Yds : int
    + Att : int
    + TD : int
    + Plus20 : int
    + Plus40 : int
    + Reach1st : int
    + Lng : int
}

class PassStats {
    + Cmp : int
    + INT : int
    + PR : int
    + Sck : int
    + SckYds : int
}

class RecStats {
    + Rec : int
    + Fmb : int
    + YAC : int
}

class RushStats {
    + Fmb : int {key}
}

' Inheritance relationships
BaseClass <|-- User
BaseClass <|-- Squad
BaseClass <|-- Player
BaseClass <|-- Prospect
BaseClass <|-- Contract
BaseClass <|-- Trade
BaseClass <|-- SeasonStats
BaseClass <|-- FGStats
BaseClass <|-- IntStats
BaseClass <|-- TackleStats
BaseClass <|-- KickStats
BaseClass <|-- ReturnStats
BaseClass <|-- SkillStats

Squad <|-- Franchise
Squad <|-- Team

SPLineup <|-- Lineup

KickStats <|-- KOStats
KickStats <|-- PuntStats

ReturnStats <|-- KRStats
ReturnStats <|-- PRStats

SkillStats <|-- PassStats
SkillStats <|-- RecStats
SkillStats <|-- RushStats


' Composition relationships
Squad *-- Player : "has"

Franchise |o--|| Player : "protects"
Franchise |o--|| Player : "protects"
Franchise |o--|| Player : "protects"

Team ||--|| User : "owns"
Team ||--o| RosterSettings : "has"
Team ||--|| Lineup : "has offensive"
Team ||--|| Lineup : "has defensive"
Team ||--|| SPLineup : "has"
Team ||--o{ Trade : "participates in"

Player ||--o{ Contract : "owns"
Player ||--o| Prospect : "is"
Player ||--o{ SeasonStats : "has"

SeasonStats ||--|| FGStats : "references"
SeasonStats }o--|| IntStats : "references"
SeasonStats }o--|| TackleStats : "references"
SeasonStats }o--|| PassStats : "references"
SeasonStats }o--|| RecStats : "references"
SeasonStats }o--|| RushStats : "references"
SeasonStats }o--|| PRStats : "references"
SeasonStats }o--|| KRStats : "references"
SeasonStats }o--|| KOStats : "references"
SeasonStats }o--|| PuntStats : "references"

@enduml